--- a/Lab5/lab5_exe_D.html
+++ b/Lab5/lab5_exe_D.html
@@ -2,8 +2,8 @@
 =========================================================
 Name        : lab5_exe_D.html
 Assignment  : Lab 5, Exercise D
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Author(s)   : Neha Parmar, Shahed Issa
+Submission  : Feb 12, 2024
 Description : Arrays and functions.
 =========================================================
 -->
