--- a/Lab5/lab5 exe_B.html
+++ b/Lab5/lab5 exe_B.html
@@ -1,3 +1,13 @@
+<!--
+=========================================================
+Name        : lab5_exe_B.html
+Assignment  : Lab 5, Exercise B
+Author(s)   : Neha Parmar, Shahed Issa
+Submission  : Feb 12, 2024
+Description : Arrays and functions.
+=========================================================
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
